--- a/package.json
+++ b/package.json
@@ -5,15 +5,21 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "vitest",
+    "coverage": "vitest run --coverage"
   },
   "dependencies": {
     "vue": "^3.2.25"
   },
   "devDependencies": {
+    "@types/node": "^17.0.23",
     "@vitejs/plugin-vue": "^2.2.0",
+    "@vue/test-utils": "^2.0.0-rc.18",
+    "jsdom": "^19.0.0",
     "typescript": "^4.5.4",
     "vite": "^2.8.0",
+    "vitest": "^0.7.11",
     "vue-tsc": "^0.29.8"
   }
 }
