--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -1,8 +1,14 @@
 {
   "compilerOptions": {
+    "allowSyntheticDefaultImports": true,
     "composite": true,
-    "module": "esnext",
-    "moduleResolution": "node"
+    "forceConsistentCasingInFileNames": true,
+    "isolatedModules": true,
+    "module": "ESNext",
+    "moduleResolution": "Node",
+    "skipLibCheck": true,
+    "strict": true,
+    "target": "ESNext"
   },
   "include": ["vite.config.ts"]
 }
